@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: libdv 
+Description: DV software codec
+Requires: @REQUIRES@
+Version: @VERSION@
+Libs: -L${libdir} -ldv
+Cflags: -I${includedir}
